feature: residues normality tests

--- a/cholesterol_model.ipynb
+++ b/cholesterol_model.ipynb
@@ -564,7 +564,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x128cfa930>"
+       "<seaborn.axisgrid.PairGrid at 0x11d8b7fb0>"
       ]
      },
      "execution_count": 22,
@@ -790,7 +790,7 @@
     "\n",
     "numeric_features = ['idade', 'altura', 'peso']\n",
     "nominal_features = ['grupo_sanguineo', 'fumante']\n",
-    "ordinal_features = ['nivel_atividade_fisica']\n"
+    "ordinal_features = ['nivel_atividade_fisica']"
    ]
   },
   {
@@ -1037,16 +1037,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x12cf70980>"
+       "<matplotlib.lines.Line2D at 0x11f7347a0>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1089,9 +1089,103 @@
     "\n",
     "plt.figure(figsize=(14,8))\n",
     "pg.qqplot(residues_std, dist='norm')\n",
-    "plt.xlabel('Quantis teóricos')\n",
-    "plt.ylabel('Resíduos na escala padrão')\n",
+    "plt.xlabel('Theoretical quantiles')\n",
+    "plt.ylabel('Residues in standard deviation')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Residues normality test\n",
+    "from scipy.stats import shapiro, kstest, anderson"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Statistics: 0.9807736277580261 e P-Value: 0.000626839988399297\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Shapiro-Wilk\n",
+    "stat_shapiro, pvalue_shapiro = shapiro(residues)\n",
+    "print(\"Test Statistics: {} e P-Value: {}\".format(stat_shapiro, pvalue_shapiro))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Statistics: 0.42455920998485613 e P-Value: 8.925833190910163e-48\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Kolmogorov-Smirnov\n",
+    "stat_ks, pvalue_ks = kstest(residues, 'norm')\n",
+    "print(\"Test Statistics: {} e P-Value: {}\".format(stat_ks, pvalue_ks))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Statistics: 0.9169275158490109 and Critical Values: 0.776\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Anderson-Darling\n",
+    "stat_and, critical_and, significance_and = anderson(residues, 'norm')\n",
+    "print(\"Test Statistics: {} and Critical Values: {}\".format(stat_and, critical_and[2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from statsmodels.stats.diagnostic import lilliefors, het_goldfeldquandt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Statistics: 0.04955371030192918 e P-Value: 0.12533323720735734\n"
+     ]
+    }
+   ],
+   "source": [
+    "stat_ll, pvalue_ll = lilliefors(residues, 'norm', pvalmethod='table')\n",
+    "print(\"Test Statistics: {} e P-Value: {}\".format(stat_ll, pvalue_ll))"
    ]
   }
  ],
