feature: homocetasticity test

--- a/cholesterol_model.ipynb
+++ b/cholesterol_model.ipynb
@@ -1120,7 +1120,7 @@
    "source": [
     "# Shapiro-Wilk\n",
     "stat_shapiro, pvalue_shapiro = shapiro(residues)\n",
-    "print(\"Test Statistics: {} e P-Value: {}\".format(stat_shapiro, pvalue_shapiro))"
+    "print(\"Test Statistics: {} and P-Value: {}\".format(stat_shapiro, pvalue_shapiro))"
    ]
   },
   {
@@ -1139,7 +1139,7 @@
    "source": [
     "# Kolmogorov-Smirnov\n",
     "stat_ks, pvalue_ks = kstest(residues, 'norm')\n",
-    "print(\"Test Statistics: {} e P-Value: {}\".format(stat_ks, pvalue_ks))"
+    "print(\"Test Statistics: {} and P-Value: {}\".format(stat_ks, pvalue_ks))"
    ]
   },
   {
@@ -1185,7 +1185,32 @@
    ],
    "source": [
     "stat_ll, pvalue_ll = lilliefors(residues, 'norm', pvalmethod='table')\n",
-    "print(\"Test Statistics: {} e P-Value: {}\".format(stat_ll, pvalue_ll))"
+    "print(\"Test Statistics: {} and P-Value: {}\".format(stat_ll, pvalue_ll))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Statistics: 0.671613576525354 and P-Value: 0.9893959472385482\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Homocestasticity test. Have to transform X_test with the same processor used do train model\n",
+    "pipe = Pipeline(steps=[(\"preprocessor\", preprocessor)])\n",
+    "X_test_transformed = pipe.fit_transform(X_test)\n",
+    "\n",
+    "# Goldfeld-Quandt\n",
+    "test_goldfeld = het_goldfeldquandt(residues, X_test_transformed)\n",
+    "stat_goldfeld = test_goldfeld[0]\n",
+    "pvalue_goldfeld = test_goldfeld[1]\n",
+    "print(\"Test Statistics: {} and P-Value: {}\".format(stat_goldfeld, pvalue_goldfeld))"
    ]
   }
  ],
