--- a/cholesterol_model.ipynb
+++ b/cholesterol_model.ipynb
@@ -1212,6 +1212,36 @@
     "pvalue_goldfeld = test_goldfeld[1]\n",
     "print(\"Test Statistics: {} and P-Value: {}\".format(stat_goldfeld, pvalue_goldfeld))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./cholesterol_model.pkl']"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Save Model\n",
+    "joblib.dump(model_reg, './cholesterol_model.pkl')"
+   ]
   }
  ],
  "metadata": {
